tests/errors/syntax/018.ura
// errors/syntax/018 — `struct` missing identifier
use "@/header"

struct:
    x int
    y int

main():
    output("hi\n")
