tests/errors/syntax/018.err
[1m[0;31merror: [0mexpected identifier after `struct`
  [1m[34m-->[0m src/tests/errors/syntax/018.ura:4:1
  [1m[34m|[0m
[1m[34m4 |[0m struct:
  [1m[34m|[0m [1;31m^^^^^^[0m
